@@ -147,6 +147,33 @@ void JTL::run( Session* session, const std::string& argument ){
   }
 
 
+  // Apply color twist if requested                         
+  if( session->view->ctw.size() ){
+    if( session->loglevel >= 4 ){
+      *(session->logfile) << "JTL :: Applying color twist";
+      function_timer.start();
+    }
+    filter_twist( rawtile, session->view->ctw );
+    if( session->loglevel >= 4 ){
+      *(session->logfile) << " in " << function_timer.getTime() << " microseconds" << endl;
+    }
+  }
+
+
+  // Reduce to 1 or 3 bands if we have an alpha channel or a multi-band image
+  if( rawtile.channels == 2 || rawtile.channels > 3 ){
+    unsigned int bands = (rawtile.channels==2) ? 1 : 3;
+    if( session->loglevel >= 4 ){
+      *(session->logfile) << "JTL :: Flattening channels to " << bands;
+      function_timer.start();
+    }
+    filter_flatten( rawtile, bands );
+    if( session->loglevel >= 4 ){
+      *(session->logfile) << " in " << function_timer.getTime() << " microseconds" << endl;
+    }
+  }
+
+
   // Apply any gamma correction
   if( session->view->getGamma() != 1.0 ){
     float gamma = session->view->getGamma();
@@ -181,33 +208,6 @@ void JTL::run( Session* session, const std::string& argument ){
       function_timer.start();
     }
     filter_cmap( rawtile, session->view->cmap );
-    if( session->loglevel >= 4 ){
-      *(session->logfile) << " in " << function_timer.getTime() << " microseconds" << endl;
-    }
-  }
-
-
-  // Apply color twist if requested                                                                                                                                                
-  if( session->view->ctw.size() ){
-    if( session->loglevel >= 4 ){
-      *(session->logfile) << "JTL :: Applying color twist";
-      function_timer.start();
-    }
-    filter_twist( rawtile, session->view->ctw );
-    if( session->loglevel >= 4 ){
-      *(session->logfile) << " in " << function_timer.getTime() << " microseconds" << endl;
-    }
-  }
-
-
-  // Reduce to 1 or 3 bands if we have an alpha channel or a multi-band image
-  if( rawtile.channels == 2 || rawtile.channels > 3 ){
-    unsigned int bands = (rawtile.channels==2) ? 1 : 3;
-    if( session->loglevel >= 4 ){
-      *(session->logfile) << "JTL :: Flattening channels to " << bands;
-      function_timer.start();
-    }
-    filter_flatten( rawtile, bands );
     if( session->loglevel >= 4 ){
       *(session->logfile) << " in " << function_timer.getTime() << " microseconds" << endl;
     }
