@@ -1,3 +1,8 @@
+30/07/2014:
+	- Moved CTW processing function to before gamma function in JTL.cc and CVT.cc.
+	- Added missing function comments and minor layout changes in Transform.cc and FIF.cc.
+
+
 24/07/2014:
 	- Simplified the use of hash_map types and removed the customized hash function, which
 	  was causing our image metadata cache to work incorrectly. Removed the const prefix from
